--- a/Assignments/1.String_Array_Object_HOF/Problems/18.analyzeBudget.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/18.analyzeBudget.html
@@ -25,6 +25,9 @@
         </ul>
         <p>Input:</p>
         <div style="border: 1px solid black;padding: 20px;background-color: rgb(235, 235, 235);">
+            function analyzeBudget(arr) {<br>   
+            <br>
+            } <br>
             const transaction = [ <br>
             { name: "Rent", category: "Housing", subCategory: "Fixed", amount: "₹20000" }, <br>
             { name: "Groceries", category: "Food", subCategory: "Essentials", amount: "₹3500" }, <br>
