--- a/Assignments/1.String_Array_Object_HOF/Problems/22.ChangeArray.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/22.ChangeArray.html
@@ -95,9 +95,13 @@
 
         <h2>Sample Input 1</h2>
         <pre>
-let arr = 3 3 2 9 7
-let res = changeArray(arr)
-console.log(res)
+function changeArray(arr) { <br>
+ <br>
+} <br>
+ <br>
+let arr = [3, 3, 2, 9, 7] <br>
+let res = changeArray(arr) <br>
+console.log(res) <br>
     </pre>
 
         <h2>Sample Output 1</h2>
