--- a/Assignments/1.String_Array_Object_HOF/Problems/26.superDigit.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/26.superDigit.html
@@ -81,7 +81,18 @@
         <p>Print the super-digit of the integer <code>p</code>.</p>
 
         <h3>Sample Input 1</h3>
-        <pre>148 3</pre>
+        <pre>
+function superDigit(num){
+
+}
+
+
+let num = '148'
+let n = 3
+
+let res  = superDigit(num)
+console.log(res)
+        </pre>
 
         <h3>Sample Output 1</h3>
         <pre>3</pre>
