--- a/Assignments/1.String_Array_Object_HOF/Problems/27.CapitalLetter.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/27.CapitalLetter.html
@@ -61,7 +61,15 @@
         <h3>💡 Example:</h3>
         <pre>
 Input:
-"   hello   world this is   javascript "
+function capitalizeWords(str){
+
+}
+
+
+let str = "   hello   world this is   javascript "
+
+let res = capitalizeWords(str)
+console.log(res)
 
 Output:
 "   Hello   World This Is   Javascript "
