--- a/Assignments/1.String_Array_Object_HOF/Problems/28.occurrenceChar.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/28.occurrenceChar.html
@@ -61,7 +61,14 @@
         <h3>💡 Example:</h3>
         <pre>
 Input:
-["abc", "bca", "cab"]
+function countChar(arr) { <br>
+ <br> <br>
+   
+}
+ <br> <br>
+let arr = ["abc", "bca", "cab"] <br>
+let res = countChar(arr) <br>
+console.log(res)  <br>
 
 Output:
 { a: 3, b: 3, c: 3 }
