--- a/Assignments/1.String_Array_Object_HOF/Problems/30.filterDepartments.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/30.filterDepartments.html
@@ -20,6 +20,10 @@
             return an array of departments where the total budget exceeds ₹150000.</p>
         <p>Input:</p>
         <div style="border: 1px solid black;padding: 20px;background-color: rgb(235, 235, 235);">
+            function filterDepartments(data) {<br>
+            <br>
+            <br>
+            } <br>
             data = { <br>
             HR: { Q1: 50000, Q2: 70000 }, <br>
             Tech: { Q1: 150000, Q2: 130000 }, <br>
