--- a/Assignments/1.String_Array_Object_HOF/Problems/32.Group_all_students _by_their_age.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/32.Group_all_students _by_their_age.html
@@ -64,6 +64,9 @@
         <h3>💡 Example:</h3>
         <pre>
 Input:
+function groupUsersByAge(arr) {
+    
+}
 const arr = [
     { user: "Alice", age: 25 },
     { user: "Bob", age: 30 },
