--- a/Assignments/1.String_Array_Object_HOF/Problems/41.findTopStudent.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/41.findTopStudent.html
@@ -26,6 +26,9 @@
 
 
     <p style="border: 1px solid black; padding: 30px; background-color: gray;">Example Invocation: <br>
+        function findTopStudent(school, subject) {<br>
+        <br>
+        } <br>
         const school = { <br>
         name: "XYZ School",<br>
         establishYear: 1990,<br>
