--- a/Assignments/1.String_Array_Object_HOF/Problems/43.highestStudentCountDepartment.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/43.highestStudentCountDepartment.html
@@ -25,7 +25,10 @@
         destructuring and other JavaScript concepts.</p>
 
 
-    <p style="border: 1px solid black; padding: 30px; background-color: gray;">Example Invocation: <br>
+    <p style="border: 1px solid black; padding: 30px; background-color: gray;">Example Invocation: <br><br><br>
+        function highestStudentCountDepartment(school){<br>
+    <br>
+        } <br><br><br>
         const school = { <br>
         name: "XYZ School",<br>
         establishYear: 1990,<br>
