--- a/Assignments/1.String_Array_Object_HOF/Problems/6.palindromesString.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/6.palindromesString.html
@@ -43,21 +43,16 @@
         <h4>palindromesString</h4>
         <p>Input</p>
         <p style="border: 1px solid black;background-color: rgb(231, 231, 231); padding: 30px;">
-            const words = [
-            "racecar",
-            "hello",
-            "deified",
-            "world",
-            "level",
-            "programming",
-            "radar",
-            "civic",
-            "javascript",
-            ];
+            function palindromesString(words){ <br>
 
-            <br>
-            let res = palindromesString(words) <br>
-            console.log(res)
+<br>
+
+            }<br><br><br>
+            const words = [ "racecar", "hello", "deified", "world", "level", "programming", "radar", "civic",
+            "javascript", ];<br>
+            let res = palindromesString(words)<br>
+            console.log(res)<br>
+          
         </p>
         <p>Output</p>
         <p style="border: 1px solid black;background-color: rgb(231, 231, 231); padding: 30px;">
