--- a/Assignments/1.String_Array_Object_HOF/Problems/7.CheckAnagrams.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/7.CheckAnagrams.html
@@ -84,6 +84,12 @@
     <div class="section">
         <h2>🧪 Sample Input 1</h2>
         <pre>
+function isAnagram (str1,str2){
+
+   
+}
+
+
 let str1 = 'listen'
 let str2 = 'silent'
 let res = isAnagram (str1,str2)
