--- a/Assignments/1.String_Array_Object_HOF/Problems/12.sortStudentsByCondition.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/12.sortStudentsByCondition.html
@@ -56,6 +56,11 @@
         <p style="border: 1px solid black;background-color: rgb(231, 231, 231); padding: 30px;">
 
             // Input <br>
+            function sortStudentsByCondition(students, sortByAgeDescending) { <br>
+
+            <br>
+            }
+            <br>
             const students = [ <br>
             { name: "Alice", age: 21 },<br>
             { name: "Bob", age: 19 },<br>
@@ -63,7 +68,7 @@
             { name: "David", age: 20 }<br>
             ];<br>
 
-            Condition function: Sort by age in descending order<br>
+
             function sortByAgeDescending(a, b) {<br>
             return b.age - a.age;<br>
             }<br>
