--- a/Assignments/1.String_Array_Object_HOF/Problems/31.transformMarksData.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/31.transformMarksData.html
@@ -43,6 +43,10 @@
 
         <p>Input</p>
         <p style="border: 1px solid black;background-color: rgb(231, 231, 231); padding: 30px;">
+            function transformMarksData(allStudentsMarksData){ <br>
+
+            <br> }
+            <br>  <br>    <br>  
             let prateekMarksData = { <br>
             name: "Prateek",<br>
             subject1: "Javascript",<br>
