--- a/Assignments/1.String_Array_Object_HOF/Problems/45.massageArray.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/45.massageArray.html
@@ -43,6 +43,9 @@
 
         <p>Input</p>
         <p style="border: 1px solid black;background-color: rgb(231, 231, 231); padding: 30px;">
+            function massageArray(exampleInputArray, typeOfCourse, CourseDurationDirectory, Category) {<br>
+            <br>
+            } <br>
             let typeOfCourse = [ <br>
             { id: 1, name: "Developer" },<br>
             { id: 2, name: "Tester" },<br>
@@ -210,7 +213,8 @@
             },<br>
             ];<br>
 
-
+            let res = massageArray(exampleInputArray, typeOfCourse, CourseDurationDirectory, Category) <br>
+            console.log(res) <br>
         </p>
         <p>Output</p>
         <p style="border: 1px solid black;background-color: rgb(231, 231, 231); padding: 30px;">
