--- a/Assignments/1.String_Array_Object_HOF/Problems/5.ProductOfMultipleOfThreeOrFive.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/5.ProductOfMultipleOfThreeOrFive.html
@@ -44,9 +44,16 @@
 
         <p>Input</p>
         <p style="border: 1px solid black;background-color: rgb(231, 231, 231); padding: 30px;">
-            const numbers = [7, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597]; <br>
-            let res = ProductOfMultipleOfThreeOrFive(numbers) <br>
-            console.log(res)
+  
+function ProductOfMultipleOfThreeOrFive(numbers){ <br>
+   <br>
+   
+}<br>
+
+const numbers = [7, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597];<br>
+let res = ProductOfMultipleOfThreeOrFive(numbers)<br>
+console.log(res)<br>
+
         </p>
         <p>Output</p>
         <p style="border: 1px solid black;background-color: rgb(231, 231, 231); padding: 30px;">
