--- a/Assignments/1.String_Array_Object_HOF/Problems/9.iceCreamCount.html
+++ b/Assignments/1.String_Array_Object_HOF/Problems/9.iceCreamCount.html
@@ -43,6 +43,10 @@
 
         <p>Input</p>
         <p style="border: 1px solid black;background-color: rgb(231, 231, 231); padding: 30px;">
+            function Implementation(data){<br>
+            <br>
+            } <br><br><br><br>
+
             const data = [ <br>
             {<br>
             name: "Superman",<br>
